--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .nav {
-  @apply left-0 right-0 top-0 grid grid-cols-[20%_80%] bg-white-alpha-50 p-6;
+  @apply bg-white-alpha-0 sticky left-0 right-0 top-0 z-10 grid grid-cols-[20%_80%] px-6 py-4;
 }
 .nav-ul {
   @apply ml-auto flex items-center;
