--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.container-layout {
+  @apply mx-56 px-6;
+}
+
 .nav {
   @apply mx-56 grid grid-cols-[20%_80%] px-6;
 }
@@ -19,7 +23,7 @@
 }
 
 .nav-li-group:hover {
-  @apply -translate-y-2 rounded-md bg-gray-700 shadow-md delay-300;
+  @apply text-blue-normal -translate-y-2 rounded-md bg-gray-700 shadow-md delay-300;
 }
 
 .footer {
@@ -98,7 +102,7 @@
 }
 
 .form-label-required {
-  @apply flex items-center p-2 tracking-widest;
+  @apply flex w-1/3 items-center justify-end p-2 tracking-widest;
 }
 .form-label-required::after {
   content: "*";
@@ -106,7 +110,14 @@
 }
 
 .form-input {
-  @apply w-1/2 border-2 border-solid border-gray-300 p-4 text-xl;
+  @apply ml-1 w-1/3 border-2 border-solid border-gray-300 p-4 text-xl;
+}
+
+.form-input-error {
+  @apply w-1/3 border-2 border-solid border-red-500 p-4 text-xl delay-100;
+}
+.error-message {
+  @apply ml-2 flex w-1/4 items-center  text-xl text-red-500;
 }
 
 .form-button {
