--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
 }
 
 .dropdown-item:focus {
-  outline: 2px solid #007bff;
+  @apply outline;
 }
 .footer-group {
   @apply flex flex-col justify-center;
@@ -34,12 +34,11 @@
 }
 
 .footer-li-first {
-  @apply cursor-pointer;
+  @apply cursor-pointer py-1 text-base;
 }
 
-.footer-li-first,
 .footer-li-second {
-  @apply py-1 text-base;
+  @apply p-1 text-sm;
 }
 
 .footer-li-first:focus,
@@ -79,6 +78,7 @@
 .feature-section-title {
   @apply flex justify-center py-4 text-4xl md:text-6xl;
 }
+
 .service {
   @apply relative flex w-full flex-col justify-center py-5 md:my-20 lg:flex-row;
 }
@@ -89,21 +89,23 @@
   @apply w-full lg:w-3/4;
 }
 .service-pic img {
-  @apply h-64 w-full object-cover lg:h-full;
+  @apply h-auto w-full object-cover lg:h-full;
 }
 
 .service-paragraph {
-  @apply relative z-10 w-full -translate-y-1/3 rounded-xl bg-paragraph-color p-6 tracking-widest text-white opacity-90 lg:absolute lg:top-1/2 lg:mt-0 lg:w-1/2 lg:p-10;
-}
-.service-paragraph h4 {
-  @apply p-2 text-2xl md:text-4xl;
-}
-.service-paragraph p {
-  @apply break-words p-2 text-base leading-7 md:text-xl lg:leading-10;
+  @apply relative z-10 w-full -translate-y-1/3 rounded-xl bg-paragraph-color p-6 text-center tracking-widest opacity-90 lg:absolute lg:top-1/2 lg:mt-0 lg:w-1/2 lg:p-8;
 }
 .service:nth-child(odd) .service-paragraph {
-  @apply lg:left-0;
+  @apply lg:translate-x-1/3;
 }
+
 .service:nth-child(even) .service-paragraph {
-  @apply lg:right-0;
+  @apply lg:-translate-x-1/3;
+}
+
+.service-paragraph h4 {
+  @apply p-2 text-xl text-red-400 md:text-3xl xl:text-4xl;
+}
+.service-paragraph p {
+  @apply break-words text-sm leading-7 text-white md:text-xl lg:leading-10;
 }
