--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@
   @apply px-4 py-2  text-center text-2xl font-semibold text-sky-700 md:text-4xl;
 }
 .sidebar-paragraph-content {
-  @apply flex justify-center break-words p-2 text-center text-base leading-relaxed text-gray-600 md:text-left md:text-lg;
+  @apply flex justify-center whitespace-pre-line break-words p-4 text-center text-base leading-relaxed text-gray-600 md:text-left md:text-lg;
 }
 
 .feature-section-title {
