--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@
   @apply my-5 flex flex-col rounded-md bg-sky-50  md:flex-row-reverse md:p-6;
 }
 .sidebar-picture {
-  @apply mb-4 w-full overflow-hidden rounded-lg align-middle shadow-md md:mb-0 md:w-1/2;
+  @apply mb-4 max-h-[70vh] w-full overflow-hidden rounded-lg object-cover align-middle shadow-md md:mb-0 md:w-1/2;
 }
 .sidebar-paragraph {
   @apply flex w-full flex-col justify-center p-2 md:w-1/2 md:p-4;
@@ -72,7 +72,7 @@
   @apply px-4 py-2  text-center text-2xl font-semibold text-sky-700 md:text-4xl;
 }
 .sidebar-paragraph-content {
-  @apply flex justify-center whitespace-pre-line break-words p-4 text-center text-base leading-relaxed text-gray-600 md:text-left md:text-lg;
+  @apply flex justify-center whitespace-pre-line break-words p-4  text-base leading-relaxed text-gray-600 md:text-left md:text-lg;
 }
 
 .feature-section-title {
