--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .container-layout {
-  @apply mx-5 px-2;
+  @apply mx-5 px-4;
 }
 
 .container-layout-lg {
@@ -11,7 +11,7 @@
 }
 
 .container-layout-xl {
-  @apply xl:mx-56 xl:px-6;
+  @apply xl:mx-40 xl:px-8;
 }
 
 .li-group {
@@ -20,7 +20,7 @@
 
 .li-group:hover,
 .li-group:focus {
-  @apply text-blue-normal xl:-translate-y-2 xl:text-info xl:delay-300;
+  @apply text-blue-600 xl:-translate-y-2 xl:text-info xl:delay-300;
 }
 
 .dropdown-item:focus {
@@ -43,7 +43,7 @@
 
 .footer-li-first:focus,
 .footer-li-first:hover {
-  @apply xl:text-blue-normal;
+  @apply xl:text-blue-600;
 }
 .footer-first-li {
   @apply cursor-pointer rounded-3xl bg-gray-500 p-2;
@@ -80,32 +80,19 @@
 }
 
 .service {
-  @apply relative flex w-full flex-col justify-center py-5 md:my-20 lg:flex-row;
+  @apply my-10 flex w-full justify-center bg-black p-5 lg:flex-row;
 }
 .service:nth-child(even) {
-  @apply lg:flex-row-reverse;
+  @apply flex-row-reverse;
 }
-.service-pic {
-  @apply w-full lg:w-3/4;
-}
+
 .service-pic img {
-  @apply h-auto w-full object-cover lg:h-full;
+  @apply w-full object-cover lg:h-1/2;
 }
 
-.service-paragraph {
-  @apply relative z-10 w-full -translate-y-1/3 rounded-xl bg-paragraph-color p-6 text-center tracking-widest opacity-90 lg:absolute lg:top-1/2 lg:mt-0 lg:w-1/2 lg:p-8;
+.service-paragraph-title {
+  @apply p-2 text-xl text-red-600 md:text-3xl xl:text-4xl;
 }
-.service:nth-child(odd) .service-paragraph {
-  @apply lg:translate-x-1/3;
-}
-
-.service:nth-child(even) .service-paragraph {
-  @apply lg:-translate-x-1/3;
-}
-
-.service-paragraph h4 {
-  @apply p-2 text-xl text-red-400 md:text-3xl xl:text-4xl;
-}
-.service-paragraph p {
-  @apply break-words text-sm leading-7 text-white md:text-xl lg:leading-10;
+.service-paragraph-content {
+  @apply break-words text-sm  text-white md:text-xl;
 }
