change herosection  picture to jpg and add text-color for footer & hammenu

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,8 @@
 }
 
 .footer-li-first:focus,
-.footer-li-first:hover {
+.footer-li-first:hover,
+.footer-li-first {
   @apply xl:text-blue-600;
 }
 .footer-first-li {
