--- a/src/index.css
+++ b/src/index.css
@@ -31,8 +31,8 @@
 
 .footer-li-first:focus,
 .footer-li-first:hover,
-.footer-li-first {
-  @apply xl:text-blue-600;
+.footer-li-first:active {
+  @apply text-blue-600;
 }
 .footer-first-li {
   @apply cursor-pointer rounded-3xl bg-gray-500 p-2;
