--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,16 @@
   @apply xl:mx-40 xl:px-8;
 }
 .title {
-  @apply font-orbitron flex w-full justify-center py-10 text-5xl font-bold tracking-widest text-blue-700 md:text-6xl;
+  @apply relative flex w-full justify-center overflow-hidden py-10 font-orbitron text-5xl font-bold tracking-widest text-blue-700 md:text-6xl;
+}
+
+.title::after {
+  content: "";
+  @apply absolute -right-1/3 top-1/2 h-1 w-[calc(100%-50%-1rem)] bg-red-600 opacity-70;
+}
+.title::before {
+  content: "";
+  @apply absolute -left-1/3 top-1/2 h-1 w-[calc(100%-50%-1rem)] bg-red-600 opacity-70;
 }
 
 .footer-group {
@@ -59,10 +68,10 @@
   @apply flex w-full flex-col justify-center p-2 md:w-1/2 md:p-4;
 }
 .sidebar-paragraph-title {
-  @apply font-orbitron px-4  py-2 text-center text-2xl font-semibold tracking-widest text-sky-700 md:text-4xl;
+  @apply px-4 py-2  text-center font-orbitron text-2xl font-semibold tracking-widest text-sky-700 md:text-4xl;
 }
 .sidebar-paragraph-content {
-  @apply font-roboto flex justify-center whitespace-pre-line break-words  p-4 text-base leading-relaxed tracking-wider text-gray-600 md:text-left md:text-lg;
+  @apply flex justify-center whitespace-pre-line break-words p-4  font-roboto text-base leading-relaxed tracking-wider text-gray-600 md:text-left md:text-lg;
 }
 
 .feature-section-title {
@@ -81,10 +90,10 @@
 }
 
 .service-paragraph-title {
-  @apply font-orbitron p-2 text-xl text-red-600 md:text-3xl xl:text-4xl;
+  @apply p-2 font-orbitron text-xl text-red-600 md:text-3xl xl:text-4xl;
 }
 .service-paragraph-content {
-  @apply font-roboto break-words  text-sm text-white md:text-xl;
+  @apply break-words font-roboto  text-sm text-white md:text-xl;
 }
 
 .mySwiper .swiper-pagination-bullet-active {
