--- a/src/index.css
+++ b/src/index.css
@@ -56,19 +56,19 @@
 }
 
 .sidebar {
-  @apply my-5 flex flex-col rounded-md bg-sky-50 md:flex-row md:p-6;
+  @apply my-5 flex flex-col rounded-md bg-sky-50 shadow-sm md:flex-row md:p-6;
 }
 .sidebar-reverse {
-  @apply my-5 flex flex-col rounded-md bg-sky-50  md:flex-row-reverse md:p-6;
+  @apply my-5 flex flex-col rounded-md bg-sky-50  shadow-sm md:flex-row-reverse md:p-6;
 }
 .sidebar-picture {
-  @apply mb-4 max-h-[70vh] w-full overflow-hidden rounded-lg object-cover align-middle shadow-md md:mb-0 md:w-1/2;
+  @apply mb-4 max-h-[50vh] w-full overflow-hidden rounded-lg bg-sky-50 object-cover p-2 align-middle  md:mb-0 md:w-1/2;
 }
 .sidebar-paragraph {
   @apply flex w-full flex-col justify-center p-2 md:w-1/2 md:p-4;
 }
 .sidebar-paragraph-title {
-  @apply px-4 py-2  text-center font-orbitron text-2xl font-semibold tracking-widest text-sky-700 md:text-4xl;
+  @apply p-2 text-center font-orbitron text-2xl font-semibold tracking-widest text-sky-700 md:text-3xl xl:text-4xl;
 }
 .sidebar-paragraph-content {
   @apply flex justify-center whitespace-pre-line break-words p-4  font-roboto text-base leading-relaxed tracking-wider text-gray-600 md:text-left md:text-lg;
