--- a/src/index.css
+++ b/src/index.css
@@ -15,17 +15,18 @@
 .container-layout-xl {
   @apply xl:mx-40 xl:px-8;
 }
+
 .title {
-  @apply relative flex w-full justify-center overflow-hidden py-10 font-orbitron text-5xl font-bold tracking-widest text-blue-700 md:text-6xl;
+  @apply relative flex w-full justify-center overflow-hidden py-10 font-orbitron text-5xl font-normal tracking-widest text-gray-800 md:text-6xl;
 }
 
 .title::after {
   content: "";
-  @apply absolute -right-1/3 top-1/2 h-1 w-[calc(100%-50%-1rem)] bg-red-600 opacity-70;
+  @apply absolute -right-1/3 top-1/2 h-1 w-[calc(100%-50%-1rem)] bg-gray-400 opacity-70;
 }
 .title::before {
   content: "";
-  @apply absolute -left-1/3 top-1/2 h-1 w-[calc(100%-50%-1rem)] bg-red-600 opacity-70;
+  @apply absolute -left-1/3 top-1/2 h-1 w-[calc(100%-50%-1rem)] bg-gray-400 opacity-70;
 }
 
 .footer-group {
